<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/txt_generate_password"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/txt_generate_password"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/nameWebsite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_generated_password"
        android:layout_width="338dp"
        android:layout_height="50dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/txt_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_length"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443" />

    <SeekBar
        android:id="@+id/Length"
        android:layout_width="345dp"
        android:layout_height="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="410dp"
        android:layout_height="89dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132">

        <RadioButton
            android:id="@+id/opt_full"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="@string/opt_full" />

        <RadioButton
            android:id="@+id/opt_numbers"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="@string/opt_numbers" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_generate"
        android:layout_width="143dp"
        android:layout_height="46dp"
        android:text="@string/btn_generate"
        app:backgroundTint="#2740CF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.623" />

    <Button
        android:id="@+id/btn_copy"
        android:layout_width="143dp"
        android:layout_height="46dp"
        android:text="@string/btn_copy"
        app:backgroundTint="#2740CF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.75" />


</LinearLayout>