<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateWebsite">

    <TextView
        android:id="@+id/txt_createWebsite"
        android:layout_width="260dp"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:text="@string/txt_createWebsite"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/nameWebsite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="5dp"
        android:text="@string/txt_url"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/url"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:inputType="textShortMessage"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameWebsite" />

    <TextView
        android:id="@+id/txt_passwordWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="5dp"
        android:text="@string/txt_passwordWebsite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordWebsite"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/loginWebsite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:inputType="textShortMessage"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/url" />

    <EditText
        android:id="@+id/passwordWebsite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginWebsite" />

    <TextView
        android:id="@+id/txt_loginWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="5dp"
        android:text="@string/txt_loginWebsite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/loginWebsite"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nameWebsite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="24dp"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_nameWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="5dp"
        android:text="@string/txt_nameWebsite"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/nameWebsite"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_back"
        android:layout_width="54dp"
        android:layout_height="29dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/txt_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

    <Button
        android:id="@+id/btn_createWebsite"
        android:layout_width="194dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:onClick="onClick"
        android:text="@string/btn_createWebsite"
        app:backgroundTint="#2740CF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_generatePassword" />

    <Button
        android:id="@+id/btn_generatePassword"
        android:layout_width="195dp"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:onClick="onClick"
        android:text="@string/btn_generatePassword"
        app:backgroundTint="#2740CF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordWebsite" />

    <CheckBox
        android:id="@+id/checkBox_showPassword_create"
        android:layout_width="219dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/checkBox_showPassword_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordWebsite" />

</androidx.constraintlayout.widget.ConstraintLayout>