<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModifyWebsite">

    <CheckBox
        android:id="@+id/checkBox_showPassword_modify"
        android:layout_width="219dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/checkBox_showPassword_modify"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordWebsiteModify" />

    <TextView
        android:id="@+id/txt_modifyWebsite"
        android:layout_width="228dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:text="@string/txt_modifyWebsite"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/nameWebsiteModify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_nameWebsiteModify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="5dp"
        android:text="@string/txt_nameWebsiteModify"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/nameWebsiteModify"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nameWebsiteModify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="24dp"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_urlModify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="5dp"
        android:text="@string/txt_urlModify"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/urlModify"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/urlModify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:inputType="textShortMessage"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameWebsiteModify" />

    <TextView
        android:id="@+id/txt_loginWebsiteModify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="5dp"
        android:text="@string/txt_loginWebsiteModify"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/loginWebsiteModify"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/loginWebsiteModify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:inputType="textShortMessage"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/urlModify" />

    <TextView
        android:id="@+id/txt_passwordWebsiteModify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="5dp"
        android:text="@string/txt_passwordWebsiteModify"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordWebsiteModify"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordWebsiteModify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginWebsiteModify" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="137dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="200dp"
        android:onClick="onClick"
        android:text="@string/btn_delete"
        app:backgroundTint="#2740CF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_update"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordWebsiteModify"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="137dp"
        android:layout_height="45dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="200dp"
        android:onClick="onClick"
        android:text="@string/btn_update"
        app:backgroundTint="#2740CF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordWebsiteModify"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_backModify"
        android:layout_width="54dp"
        android:layout_height="29dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/txt_backModify"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>