<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    tools:context=".MainPage">

    <Button
        android:id="@+id/btn_addWebsite"
        android:layout_width="221dp"
        android:layout_height="49dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:onClick="onClick"
        android:text="@string/btn_addWebsite"
        app:backgroundTint="#2740CF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/nameUser"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/textWelcome"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/textWelcome"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="20dp"
        android:onClick="onClick"
        android:text="@string/btn_logout"
        app:backgroundTint="#2740CF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/layout_List"
        android:layout_width="413dp"
        android:layout_height="490dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="13dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_logout"
        app:layout_constraintTop_toBottomOf="@+id/btn_addWebsite"
        tools:ignore="MissingConstraints">

        <ListView
            android:id="@+id/listView"
            style="@android:style/Widget.DeviceDefault.ExpandableListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>